fix(homepage): make sure there is no text squished on the side of images on small (mobile) screens

--- a/homepage/docs/stylesheets/extra.css
+++ b/homepage/docs/stylesheets/extra.css
@@ -24,3 +24,11 @@ section.hero {
     gap: 2rem;
   }
 }
+
+@media (max-width: 600px) {
+  article {
+    img {
+      width: 100%;
+    }
+  }
+}
